test/zinc_source/compile_errors/control_flow/05_continue_outside_loop_in_if_expression.zn
// expected-error: continue is only valid inside a loop

fn main() {
    value = if true {
        continue
    } else {
        1
    }
}
